# HandbookQA_Ollama

./: README.md  main.py  pyproject.toml  requirement.txt
data/: chunks.json  embeddings.npy  faiss.index  handbook.md
src/: answer.py  build_index.py  confidence.py  embed.py  injest.py  main.py  retrieve.py  validate.py
